# mihomo-tray

./: Cargo.toml  Makefile
assets/: service.launchd.plist
crates/service/: Cargo.toml
crates/service/src/: lib.rs
locales/: app.yml
src/: app.rs  download_ui.rs  i18n.rs  logging.rs  main.rs  paths.rs  settings.rs  tray.rs
src/config/: default.yaml  mod.rs  watch.rs
src/mihomo/: api.rs
src/platform/: mod.rs  paths.rs  traits.rs
src/platform/appearance/: linux.rs  macos.rs  mod.rs  noop.rs  windows.rs
src/platform/core/: installer.rs  mod.rs  sidecar.rs
src/platform/event_loop/: default.rs  macos.rs  mod.rs
src/platform/service/: macos.rs  mod.rs  unsupported.rs
src/platform/system/: bypass.rs  fallback.rs  macos_dns.rs  macos_elevated.rs  mod.rs  sysproxy.rs
src/platform/tun/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
